resolve conflicts in jwtauthserviceimpl